--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/users.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/users.yml
@@ -1,12 +1,12 @@
 ---
 {% raw %}
-- name: create the backend app group
-  group:
+- name: Create the backend app group
+  ansible.builtin.group:
     name: "{{ backend_app_group }}"
     system: true
 
-- name: create the backend app user
-  user:
+- name: Create the backend app user
+  ansible.builtin.user:
     name: "{{ backend_app_user }}"
     group: "{{ backend_app_group }}"
 {% endraw %}
