--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/cron_jobs.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/cron_jobs.yml
@@ -1,10 +1,10 @@
 ---
 {% raw %}
-- name: add django clearsessions cron job
-  cron:
+- name: Add django clearsessions cron job
+  ansible.builtin.cron:
     name: django clearsessions
     minute: "0"
     hour: "10"
     user: "{{ backend_app_user }}"
     job: ". ~/.venvrc && python manage.py clearsessions"
-{% endraw %}
+{% endraw -%}
