--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/install_selenium_dependencies.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/install_selenium_dependencies.yml
@@ -1,11 +1,11 @@
 ---
 
-- name: add the mozilla ppa
-  apt_repository:
+- name: Add the mozilla ppa
+  ansible.builtin.apt_repository:
     repo: "ppa:mozillateam/ppa"
 
-- name: install packages used with selenium and X11 forwarding
-  apt:
+- name: Install packages used with selenium and X11 forwarding
+  ansible.builtin.apt:
     name:
       - firefox-esr
       - xauth
