--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/systemd.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/systemd.yml
@@ -1,14 +1,14 @@
 ---
 {% raw %}
-- name: add systemd unit file
-  template:
+- name: Add systemd unit file
+  ansible.builtin.template:
     src: systemd_service.j2
     dest: "/etc/systemd/system/{{ backend_app_systemd_unit_name }}.service"
 
-- name: enable and restart the systemd unit
-  systemd:
+- name: Enable and restart the systemd unit
+  ansible.builtin.systemd:
     daemon_reload: true
     name: "{{ backend_app_systemd_unit_name }}"
     enabled: true
     state: restarted
-{% endraw %}
+{% endraw -%}
