--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,28 +1,45 @@
 name: CI
 
-# Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
-
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    runs-on: macos-12
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+        with:
+          path: cookiecutter-django-react-ansible
+      # Install python and cookiecutter requirements.
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+          cache: 'pip'
+          cache-dependency-path: 'cookiecutter-django-react-ansible/requirements.txt'
+      - run: pip install -r cookiecutter-django-react-ansible/requirements.txt
+      - name: Cache Vagrant boxes
+        uses: actions/cache@v2
+        with:
+          path: ~/.vagrant.d/boxes
+          key: ${{ runner.os }}-vagrant-${{ hashFiles('cookiecutter-django-react-ansible/Vagrantfile') }}
+          restore-keys: |
+            ${{ runner.os }}-vagrant-
+      - name: Generate project from cookiecutter template
+        run: cookiecutter cookiecutter-django-react-ansible --no-input
+      - name: Install vagrant plugins
+        run: vagrant plugin install vagrant-bindfs vagrant-proxyconf vagrant-vbguest
+      - name: Provision dev environment
+        run: vagrant up --provision
+        working-directory: my_project
+      - name: Run backend tests
+        run: vagrant ssh backend -c "cd /vagrant/backend_app && make test"
+        working-directory: my_project
+      - name: Run frontend tests
+        run: vagrant ssh provisioner -c "cd /vagrant/frontend_app && CI=true npm test"
+        working-directory: my_project
