Add support for running on M1 macs using VMWare Fusion as a vagrant provider. Remove the docker vagrant provider.

--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/install_selenium_dependencies.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/install_selenium_dependencies.yml
@@ -8,6 +8,7 @@
   ansible.builtin.apt:
     name:
       - firefox-esr
+      - firefox-esr-geckodriver
       - xauth
       - x11-apps
     state: present
