--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -3,31 +3,24 @@
 
 ENV["VAGRANT_EXPERIMENTAL"] = "typed_triggers"
 
-# Set volume path using create_args instead of docker.volumes, workaround for
-# issue when running Docker on WSL 2, see
-# https://github.com/hashicorp/vagrant/issues/12602
-DEFAULT_DOCKER_CREATE_ARGS = [
-  '--mount', 'type=tmpfs,destination=/run',
-  '--mount', 'type=tmpfs,destination=/run/lock',
-  '-v', '/sys/fs/cgroup:/sys/fs/cgroup:rw',
-  '--cap-add=NET_ADMIN',
-  '--cgroupns=host'
-]
-
 Vagrant.require_version ">= 2.2.5"
 
 Vagrant.configure("2") do |config|
 
   config.vagrant.plugins = {
     "vagrant-proxyconf" => {"version" => ">=2.0.10"},
-    "vagrant-vbguest" => {"version" => ">=0.24.0"},
-    "vagrant-bindfs" => {"version" => ">=1.1.9"}
+    "vagrant-vbguest" => {"version" => ">=0.24.0"}
   }
 
-  # Prefer using the VirtualBox provider over Docker if both are available
+  # Prefer using the VMWare provider over VirtualBox if both are available
   # https://www.vagrantup.com/docs/providers/basic_usage#default-provider
+  config.vm.provider "vmware_desktop"
   config.vm.provider "virtualbox"
-  config.vm.provider "docker"
+
+  # If we're using VMWare as the provider, apply the following config for all VMs
+  config.vm.provider :vmware_desktop do |vmware_desktop, override|
+    override.vm.box = "bento/ubuntu-22.04-arm64"
+  end
 
   # If we're using VirtualBox as the provider, apply the following config for all VMs
   config.vm.provider :virtualbox do |virtualbox, override|
@@ -38,23 +31,6 @@ Vagrant.configure("2") do |config|
     # machines are idle. We disable audio devices on all VMs as a workaround.
     # See https://www.virtualbox.org/ticket/18089
     virtualbox.customize ["modifyvm", :id, "--audio", "none"]
-  end
-
-  # If we're using Docker as the provider, apply the following config for all containers
-  config.vm.provider :docker do |docker, override|
-    docker.image = "{{ cookiecutter.project_slug}}_base_image"
-    docker.remains_running = true
-    docker.has_ssh = true
-    # Set volume path using create_args instead of docker.volumes,
-    # workaround for issue when running Docker on WSL 2, see
-    # https://github.com/hashicorp/vagrant/issues/12602
-    docker.create_args = [
-      '--mount', 'type=tmpfs,destination=/run',
-      '--mount', 'type=tmpfs,destination=/run/lock',
-      '-v', '/sys/fs/cgroup:/sys/fs/cgroup:rw',
-      '--cap-add=NET_ADMIN',
-      '--cgroupns=host'
-    ]
   end
 
   config.apt_proxy.http = "{{ cookiecutter.vagrant_apt_proxy }}"
@@ -78,29 +54,14 @@ Vagrant.configure("2") do |config|
       "/opt/{{ cookiecutter.project_slug }}_backend/current",
     )
 
-    backend.vm.provider :virtualbox do |virtualbox, override|
-      virtualbox.memory = 1024
-      virtualbox.cpus = 1
-      # Configure a bindfs mount for the virtualenv 'venv' directory,
-      # preventing venv files from being shared within the VirtualBox shared folder.
-      # This avoids the performance hit of running a venv from the slow shared folder.
-      override.trigger.after :"Vagrant::Action::Builtin::WaitForCommunicator", type: :action do |trigger|
-        trigger.run_remote = {inline: "mkdir -p /home/vagrant/backend_app_venv"}
-      end
-      override.bindfs.bind_folder(
-        "/home/vagrant/backend_app_venv",
-        "/opt/{{ cookiecutter.project_slug }}_backend/current/venv",
-        after: :synced_folders
-      )
+    backend.vm.provider :vmware_desktop do |vmware_desktop|
+      vmware_desktop.vmx["memsize"] = "1024"
+      vmware_desktop.vmx["numvcpus"] = "1"
     end
 
-    backend.vm.provider :docker do |docker, override|
-      docker.create_args = DEFAULT_DOCKER_CREATE_ARGS + [
-        "-v", "{{ cookiecutter.project_slug }}_venv:/opt/{{ cookiecutter.project_slug }}_backend/current/venv"
-      ]
-      override.trigger.after :"Vagrant::Action::Builtin::WaitForCommunicator", type: :action do |trigger|
-        trigger.run_remote = {inline: "chown vagrant:vagrant /opt/{{ cookiecutter.project_slug }}_backend/current/venv"}
-      end
+    backend.vm.provider :virtualbox do |virtualbox|
+      virtualbox.memory = 1024
+      virtualbox.cpus = 1
     end
 
   end
@@ -110,6 +71,10 @@ Vagrant.configure("2") do |config|
     # Forward the https port being served via nginx
     frontend.vm.network "forwarded_port", guest: 443, host: 5000
 
+    frontend.vm.provider :vmware_desktop do |vmware_desktop|
+      vmware_desktop.vmx["memsize"] = "768"
+    end
+
     frontend.vm.provider :virtualbox do |virtualbox|
       virtualbox.memory = 512
     end
@@ -117,6 +82,10 @@ Vagrant.configure("2") do |config|
 
   config.vm.define "db" do |db|
     db.vm.network "private_network", ip: "192.168.56.4"
+
+    db.vm.provider :vmware_desktop do |vmware_desktop|
+      vmware_desktop.vmx["memsize"] = "768"
+    end
 
     db.vm.provider :virtualbox do |virtualbox|
       virtualbox.memory = 512
@@ -147,29 +116,12 @@ Vagrant.configure("2") do |config|
       mount_options: ["fmode=600"]
     )
 
-    provisioner.vm.provider :virtualbox do |virtualbox, override|
-      virtualbox.memory = 1024
-      # Configure a bindfs mount for the large 'node_modules' directory,
-      # preventing these files from being shared within the VirtualBox shared folder.
-      # This avoids the performance hit of accessing a large number of files via
-      # the slow VirtualBox shared folder
-      override.trigger.after :"Vagrant::Action::Builtin::WaitForCommunicator", type: :action do |trigger|
-        trigger.run_remote = {inline: "mkdir -p /home/vagrant/frontend_app_node_modules"}
-      end
-      override.bindfs.bind_folder(
-        "/home/vagrant/frontend_app_node_modules",
-        "/vagrant/frontend_app/node_modules",
-        after: :synced_folders
-      )
+    provisioner.vm.provider :vmware_desktop do |vmware_desktop|
+      vmware_desktop.vmx["memsize"] = "1024"
     end
 
-    provisioner.vm.provider :docker do |docker, override|
-      docker.create_args = DEFAULT_DOCKER_CREATE_ARGS + [
-        "-v", "{{ cookiecutter.project_slug }}_node_modules:/vagrant/frontend_app/node_modules"
-      ]
-      override.trigger.after :"Vagrant::Action::Builtin::WaitForCommunicator", type: :action do |trigger|
-        trigger.run_remote = {inline: "chown vagrant:vagrant /vagrant/frontend_app/node_modules"}
-      end
+    provisioner.vm.provider :virtualbox do |virtualbox, override|
+      virtualbox.memory = 1024
     end
 
     provisioner.vm.provision "file" do |file|
