--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -142,7 +142,7 @@ Vagrant.configure("2") do |config|
         python3.10 -m venv ~/provisioning_venv --system-site-packages
         source ~/provisioning_venv/bin/activate
         pip install pip==23.2 wheel==0.40.0
-        pip install -r /vagrant/provisioning/requirements.txt
+        pip install -r /vagrant/provisioning/requirements.txt --no-deps
       SCRIPT
     end
 
