Switch from flake8 to ruff.

--- a/{{ cookiecutter.project_slug }}/backend_app/pyproject.toml
+++ b/{{ cookiecutter.project_slug }}/backend_app/pyproject.toml
@@ -3,6 +3,13 @@ line-length = 88
 target-version = ['py310']
 exclude = '/(venv)/'
 
+# https://docs.astral.sh/ruff/configuration/#using-pyprojecttoml
+
+[tool.ruff]
+exclude = ["venv"]
+line-length = 88
+target-version = "py310"
+
 [tool.coverage.run]
 source = ["."]
 branch = true
