--- a/{{ cookiecutter.project_slug }}/provisioning/roles/frontend_app/tasks/build.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/frontend_app/tasks/build.yml
@@ -14,7 +14,7 @@
   changed_when: true
 
 # Note that this doesn't fail the playbook if vulnerable packages are found.
-# This only displays the report in the ansible output so we don't cause any
+# This only displays the report in the ansible output, so we don't cause any
 # deployment to fail unexpectedly.
 - name: Run npm audit
   ansible.builtin.command: npm audit
