--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -3,11 +3,11 @@
 
 if Vagrant::Util::Platform.windows? then
 
-  # Newer versions of Vagrant create the ssh key with CRLF line endings on
+  # Older versions of Vagrant create the ssh key with CRLF line endings on
   # Windows hosts, which causes problems when trying to use these ssh keys
   # in the Linux VMs, see:
   # https://github.com/hashicorp/vagrant/issues/13284
-  Vagrant.require_version "< 2.4.0"
+  Vagrant.require_version ">= 2.4.1"
 
   def running_as_admin?
     # query the LOCAL SERVICE account reg key (requires admin privileges)
@@ -40,7 +40,7 @@ Vagrant.configure("2") do |config|
   # If we're using VirtualBox as the provider, apply the following config for all VMs
   config.vm.provider :virtualbox do |virtualbox, override|
     override.vm.box = "ubuntu/jammy64"
-    override.vbguest.auto_update = false
+    override.vbguest.auto_update = true
     # There seems to be a VirtualBox bug where the VirtualBox processes on the host machine
     # can get stuck at 100% after resuming from sleep on macOS hosts, even when the guest
     # machines are idle. We disable audio devices on all VMs as a workaround.
