--- a/{{ cookiecutter.project_slug }}/Dockerfile
+++ b/{{ cookiecutter.project_slug }}/Dockerfile
@@ -1,5 +1,6 @@
 FROM ubuntu:22.04
-USER root
+ARG DEVELOPER_UID=1000
+ARG DEVELOPER_GID=1000
 RUN apt-get update \
     && apt-get install -y \
     systemd \
@@ -7,10 +8,12 @@ RUN apt-get update \
     openssh-server \
     sudo \
     whois \
-    iputils-ping
+    iputils-ping \
+    sshpass
+RUN groupadd --gid $DEVELOPER_GID developer
+RUN useradd --uid $DEVELOPER_UID --gid $DEVELOPER_GID --create-home --password $(mkpasswd -m sha-512 developer) -s /bin/bash developer
+RUN usermod -aG sudo developer
 RUN sed -i 's/UsePAM yes/UsePAM no/' /etc/ssh/sshd_config
-RUN mkdir /root/.ssh
-COPY provisioning/podman_dev_key.pub /root/.ssh/authorized_keys
-COPY provisioning/dev_ssh_config /root/.ssh/config
+RUN echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
 EXPOSE 22
 CMD [ "systemd" ]
