--- a/{{ cookiecutter.project_slug }}/provisioning/environments/dev/group_vars/backend/vars.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/environments/dev/group_vars/backend/vars.yml
@@ -1,10 +1,8 @@
 ---
 {% raw %}
-backend_app_user: "vagrant"
-backend_app_group: "vagrant"
-backend_app_vagrant_mount: true
+backend_app_dev_mount: true
 backend_app_debug: true
-backend_app_database_host_ip: "192.168.56.4"
+backend_app_database_host_ip: "172.22.0.4"
 backend_app_secret_key: "$DJANGO SECRET KEY$"
 backend_app_cors_origin_whitelist:
   - "https://localhost:5000"
