--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -32,14 +32,10 @@ Vagrant.configure("2") do |config|
   config.vm.provider "vmware_desktop"
   config.vm.provider "virtualbox"
 
-  # If we're using VMWare as the provider, apply the following config for all VMs
-  config.vm.provider :vmware_desktop do |vmware_desktop, override|
-    override.vm.box = "bento/ubuntu-22.04-arm64"
-  end
+  config.vm.box = "bento/ubuntu-22.04"
 
   # If we're using VirtualBox as the provider, apply the following config for all VMs
   config.vm.provider :virtualbox do |virtualbox, override|
-    override.vm.box = "ubuntu/jammy64"
     override.vbguest.auto_update = true
     # There seems to be a VirtualBox bug where the VirtualBox processes on the host machine
     # can get stuck at 100% after resuming from sleep on macOS hosts, even when the guest
