--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/virtualenv.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/virtualenv.yml
@@ -5,10 +5,11 @@
   become: true
   ansible.builtin.apt:
     name:
+      - gcc
       - libpq-dev
-      - python3-dev
-      - python3-venv
-      - python3-pip
+      - python3.11-dev
+      - python3.11-venv
+      - python3.11
       - watchman
     state: present
 
@@ -17,7 +18,7 @@
   become_user: "{{ backend_app_user }}"
   ansible.builtin.pip:
     virtualenv: "{{ backend_app_virtualenv_dir }}"
-    virtualenv_command: /usr/bin/python3.10 -m venv
+    virtualenv_command: /usr/bin/python3.11 -m venv
     name:
       - pip==23.3.1
       - pip-tools==7.3.0
