--- a/{{ cookiecutter.project_slug }}/provisioning/vars/frontend.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/vars/frontend.yml
@@ -1,7 +1,8 @@
 ---
 {% raw %}
 
-nodejs_version: "18.x"
+nodejs_version: "24.x"
+nodejs_install_npm_user: "root"
 
 ssl_common_name: "{{ frontend_server_name }}"
 ssl_private_key_name: "frontend_app.pem"
