Skip configuring UFW on the dev environment.

--- a/{{ cookiecutter.project_slug }}/provisioning/environments/dev/group_vars/all/vars.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/environments/dev/group_vars/all/vars.yml
@@ -12,27 +12,8 @@ frontend_app_backend_url: "https://{{ backend_server_name }}:4000"
 
 database_password: "$DATABASE PASSWORD$"
 
-ufw_firewall_database_allow_from_ip:
- - 172.17.177.21
+configure_ufw_firewall: false
+ufw_firewall_rules: []
 
-ufw_firewall_additional_rules:
-  - port: "ssh"
-    proto: "tcp"
-    rule: "allow"
-    from_ip: ["any"]
-    when: true
-  # Ensure the django dev server is accessible from any address
-  - port: "4001"
-    proto: "tcp"
-    rule: "allow"
-    from_ip: ["any"]
-    when: "{{ 'backend' in group_names }}"
-  # Ensure the postgres server is accessible from any address. Don't set this
-  # in a production environment!
-  - port: "5432"
-    proto: "tcp"
-    rule: "allow"
-    from_ip: ["any"]
-    when: "{{ 'database' in group_names }}"
-{% endraw %}
 ssl_provider: 'selfsigned'
+{% endraw %}
