--- a/{{ cookiecutter.project_slug }}/provisioning/environments/prod/group_vars/all/vars.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/environments/prod/group_vars/all/vars.yml
@@ -14,6 +14,8 @@
 ## See README.txt - store sensitive variables like this using ansible vault
 #database_password: "<your-production-database-password>"
 #
+#configure_ufw_firewall: true
+#
 #ufw_firewall_database_allow_from_ip:
 # - <your-production-backend-ip-address>
 #
