Update postgres config to set explicit permissions in newer version of galaxy role.

--- a/{{ cookiecutter.project_slug }}/provisioning/vars/postgresql.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/vars/postgresql.yml
@@ -8,9 +8,11 @@ postgresql_global_config_options:
 
 postgresql_databases:
   - name: "{{ database_name }}"
+    owner: "{{ database_user }}"
 
 postgresql_users:
   - name: "{{ database_user }}"
     password: "{{ database_password }}"
     role_attr_flags: CREATEDB
+    priv: ALL
 {% endraw %}
